--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!--<string name="ip_address">https://ed9.enstrapp.com:443/sap/opu/odata/sap/ZEMT_PMAPP_SRV/</string>-->
 
     <string name="ip_address">http://103.6.157.25:8200/sap/opu/odata/sap/ZEMT_PMAPP_SRV/</string>
+    <string name="ip_address_port">103.6.157.25:8200</string>
 
 
     <string name="login_url">AuthLoginDataSet?$filter=&amp;$format=json</string>
@@ -171,6 +172,7 @@
     <string name="task_list_group">Task List Group</string>
     <string name="task_list_text">Task List Text</string>
     <string name="end_date">End Date &amp; Time</string>
+    <string name="finish_date">Finish Date &amp; Time</string>
     <string name="planned_end_date">* Planned End Date &amp; Time</string>
     <string name="completion_datetime">Completion Date &amp; Time</string>
     <string name="activity_code_group">Activity Code Group</string>
