Changes in Notification and order filter(05_03_2019)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -612,7 +612,7 @@
     <string name="notification_change">Do you want to change the selected notification ?</string>
     <string name="notifchange_offline">No Internet Connectivity. Do you want to proceed Notification Change with offline ?</string>
     <string name="notification_unabletochange">Unable to process Notification Change. Please try again.</string>
-    <string name="notification_changesuccess">Notification %1s has been created successfully.</string>
+    <string name="notification_changesuccess">Notification %1s has been Changed successfully.</string>
     <string name="notification_noorderfound">No data found for Order %1s.</string>
     <string name="notifactivity_selectcode">Please select Code.</string>
     <string name="notifactivity_selectcodegrp">Please select Code Group.</string>
@@ -825,5 +825,20 @@
     <string name="cnf_slctordr">Do you want to perform time confirmation for the selected order %1s?</string>
     <string name="teco_slctordr">Do you want to perform TECO for the selected order %1s?</string>
     <string name="refresh_calibration">Refresh In Progress&#8230;</string>
+    <string name="offline_confirmation">No Internet Connectivity. Do you want to proceed in Offline mode?</string>
+    <string name="syncmap_sp">SYNCMAP</string>
+    <string name="devicetoken_sp">DEVICE_TOKEN</string>
+    <string name="loadsettings_sp">LOAD_SETT</string>
+    <string name="auth_sp">AUTH</string>
+    <string name="vhlp_sp">VHLP</string>
+    <string name="vhlpwcm_sp">VHLP_WCM</string>
+    <string name="dord_sp">DUE_ORDERS</string>
+    <string name="dnot_sp">DUE_NOTIF</string>
+    <string name="bom_sp">BOM</string>
+    <string name="floc_sp">FLOC</string>
+    <string name="measurpoint_sp">MPTT</string>
+    <string name="jsa_sp">JSA</string>
+    <string name="Calib_sp">CALIBRATION</string>
+    <string name="initialload_unsuccess">Data load is not successful.\nCan you please do Initialload again.</string>
 
 </resources>
