--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,11 +183,12 @@
     <string name="planner">Planner</string>
     <string name="activity_key">Activity Key</string>
     <string name="activity_text">Activity Text</string>
-    <string name="equi_id">Equipment ID</string>
-    <string name="equi_txt">Equipment Text</string>
+    <string name="equi_id">Equipment</string>
+    <string name="equi_txt">Name</string>
     <string name="camera">Camera</string>
     <string name="gallery">Gallery</string>
     <string name="file">File</string>
+    <string name="strg_bin">Storage Bin</string>
     <string name="no_attachments">No Files Attached</string>
     <string name="high">High</string>
     <string name="enter_description">Please Enter Description</string>
@@ -820,8 +821,8 @@
     <string name="notif_autochang">Notification %1s has been changed successfully.</string>
     <string name="notif_dupauto">For Equipment %1s, You have multiple notifications : %2s. Do you want to create Notification?</string>
     <string name="notif_createauto">Notification %1s has been created successfully.</string>
-    <string name="notif_postpatuo">Notification %1s is postponed successfully.</string>
     <string name="notif_compatuo">Notification %1s is completed successfully.</string>
+    <string name="notif_postpatuo">Notification %1s is postponed successfully.</string>
     <string name="notifrel_ordrcrtdauto">Notification %1s is released successfully.\nOrder %2s has been created successfully.</string>
     <string name="del_slctdrecrd">Do you want to delete selected record?</string>
     <string name="rel_slctnotif">Do you want to release the selected Notification %1s?</string>
@@ -854,4 +855,6 @@
     <string name="initialload_unsuccess">Initial data load is not completed.\nPlease perform initial load again.</string>
     <string name="mob_user">Mob. User</string>
     <string name="chars_left">You have 300 characters left</string>
+    <string name="enst">Enstrapp Pvt. Ltd</string>
+    <string name="notifrel_success">Notification %1s is released successfully.</string>
 </resources>
